--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "serve-json": "server --watch db.json --port 4000"
+    "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "json-server": "^0.16.3",
