--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@types/react": "^17.0.39",
     "json-server": "^0.16.3",
-    "next": "12.0.10",
+    "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.2.2"
+    "swr": "^1.2.2",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "eslint": "8.8.0",
