--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
-    "@types/react": "^17.0.39",
     "json-server": "^0.16.3",
     "next": "^12.1.0",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "swr": "^1.2.2",
-    "typescript": "^4.5.5"
+    "swr": "^1.2.2"
   },
   "devDependencies": {
+    "@types/react": "^17.0.39",
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "typescript": "^4.5.5"
   }
 }
