--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^4.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sqlite3": "^5.0.2",
     "swr": "^1.2.2"
   },
   "devDependencies": {
